--- a/client/src/assets/scss/_globals.scss
+++ b/client/src/assets/scss/_globals.scss
@@ -1,6 +1,7 @@
 // ==== Глобальные стили ====
 body {
   height: 100%;
+  min-height: 100vh;
   overflow-x: hidden;
 
   * {
@@ -11,11 +12,12 @@ body {
   }
 }
 html {
-  height: 100%;
+  min-height: 100vh;
   scroll-behavior: smooth;
 }
 #root {
   height: 100%;
+  min-height: 100vh;
 }
 #portal {
   position: relative;
@@ -24,6 +26,7 @@ html {
   display: flex;
   flex-direction: column;
   height: 100%;
+  min-height: 100vh;
 }
 header {
   position: relative;
@@ -42,11 +45,15 @@ footer {
 }
 main {
   flex: 1 0 auto;
-  overflow: hidden;
+}
+section {
+  margin-top: $margin-over-1200;
+  width: 100%;
 }
 img {
   max-width: 100%;
   height: auto;
+  font-size: 0;
 }
 ul {
   margin: 0;
@@ -89,12 +96,16 @@ input:-webkit-autofill:active {
   height: 1px;
   margin: -1px;
 }
+.main__container {
+  max-width: $desktop-width;
+  width: 100%;
+  margin: 0 auto;
+}
 .title {
-  margin: 0;
-
   &,
   & * {
     @include h2;
+    margin-bottom: $margin-over-1200;
   }
 }
 .subtitle {
@@ -104,48 +115,28 @@ input:-webkit-autofill:active {
 .text {
   @include text;
 }
-.main {
-  max-width: $desktop-width;
-  padding: $padding-over-1200 0;
-  width: 100%;
-  margin: 0 auto;
-}
-
 .showreal {
-  margin: $margin-over-1200 0;
+  margin-top: 20px;
   width: 100%;
-  max-height: 400px;
+
+  .showreal__block {
+    height: 100%;
+    height: 400px;
+    max-height: 400px;
+  }
+}
+.showreal__block {
   height: 100%;
   background-color: $gray-2;
 }
 
-@media (max-width: 1600px) {
-  .wrapper {
+@media (max-width: 1280px) {
+  section {
+    padding: 0 $padding-over-1200;
   }
 }
-@media (max-width: 1440px) {
-  .wrapper {
-  }
-}
-@media (max-width: 1200px) {
-  .title {
-  }
-  .wrapper {
-  }
-}
-@media (max-width: 900px) {
-  .wrapper {
-  }
-}
-@media (max-width: 768px) {
-  .title {
-  }
-  .wrapper {
-  }
-}
-@media (max-width: 500px) {
-  .title {
-  }
-  .wrapper {
+@media (max-width: 530px) {
+  section {
+    padding: 0 $padding-less-1200;
   }
 }
