--- a/client/src/assets/scss/_variables.scss
+++ b/client/src/assets/scss/_variables.scss
@@ -1,11 +1,13 @@
 // ==== Цвета ====
-$primary: rgb(240, 177, 3);
-$secondary: rgb(240, 11, 3);
+$primary: rgb(41, 163, 219);
+$secondary: rgb(240, 177, 3);
 $blue: rgb(17, 78, 107);
 $gray-1: rgb(226, 226, 226);
 $gray-2: rgb(168, 168, 168);
 
 // ==== Размеры и отступы ====
+$header-height: 60px;
+$categories-height: 45px;
 $desktop-width: 1200px;
 $margin-over-1200: 30px;
 $padding-over-1200: 30px;
