--- a/client/src/components/Categories/Categories.scss
+++ b/client/src/components/Categories/Categories.scss
@@ -2,9 +2,25 @@
 @import '../../assets/scss/variables.scss';
 
 .categories {
+  position: sticky;
+  top: $header-height;
+  left: 0;
+  right: 0;
+  // padding: 10px 0;
+  height: $categories-height;
+  background-color: #fff;
+  box-shadow: 0 3px 5px -5px #000;
+  z-index: 100;
+}
+.categories__list {
   display: flex;
+  align-items: center;
   flex-wrap: nowrap;
   width: 100%;
+  height: 100%;
+  max-width: $desktop-width;
+  margin: 0 auto;
+  overflow-x: auto;
 
   li {
     min-width: 70px;
@@ -27,6 +43,24 @@
     border-color: $gray-2;
   }
   li.active {
-    border-color: #000;
+    border-color: $primary;
+  }
+}
+
+@media (max-width: 1280px) {
+  .categories__list {
+    padding-left: $padding-over-1200;
+    padding-right: $padding-over-1200;
+  }
+}
+@media (max-width: 640px) {
+  .categories {
+    top: 95px;
+  }
+}
+@media (max-width: 530px) {
+  .categories__list {
+    padding-left: $padding-less-1200;
+    padding-right: $padding-less-1200;
   }
 }
