--- a/client/src/components/Header/Header.scss
+++ b/client/src/components/Header/Header.scss
@@ -2,20 +2,77 @@
 @import '../../assets/scss/variables.scss';
 
 .header {
+  position: sticky;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: $header-height;
+  width: 100%;
+  background-color: #fff;
+  z-index: 100;
+}
+.header__container {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   max-width: $desktop-width;
-  width: 100%;
   margin: 0 auto;
-  padding: $padding-over-1200 0;
+  padding: $padding-less-1200 0;
 
   & > div {
+    display: flex;
+    align-items: center;
+
     .header__phone,
     .button {
       margin-right: 20px;
     }
+    .button svg {
+      width: 30px;
+      height: 30px;
+    }
     * {
       @include text;
     }
+  }
+}
+.header__cart {
+  transition: ease 0.2s;
+  &:hover {
+    opacity: 0.7;
+  }
+
+  svg {
+    width: 30px;
+    height: 30px;
+  }
+}
+
+@media (max-width: 1280px) {
+  .header__container {
+    padding-left: $padding-over-1200;
+    padding-right: $padding-over-1200;
+  }
+}
+@media (max-width: 1200px) {
+  .header__container {
+    padding-top: 5px;
+    padding-bottom: 5px;
+  }
+}
+@media (max-width: 640px) {
+  .header {
+    height: 95px;
+  }
+  .header__container {
+    align-items: center;
+    flex-direction: column;
+    padding-left: 0;
+    padding-right: 0;
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+  .header__logo {
+    margin-bottom: $margin-less-1200;
   }
 }
