--- a/client/src/components/Modal/Modal.scss
+++ b/client/src/components/Modal/Modal.scss
@@ -7,6 +7,7 @@
   top: 0;
   right: 0;
   bottom: 0;
+  padding: 0 10px;
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 99999;
 
@@ -23,12 +24,13 @@
   top: 50%;
   left: 50%;
   overflow-y: auto;
+  max-width: 520px;
+  width: 100%;
   max-height: 80vh;
   transform: translate(-50%, -50%);
 
   &--default {
     padding: 60px;
-    max-width: 520px;
     border-radius: 12px;
     background-color: #fff;
   }
@@ -103,24 +105,12 @@
   }
 }
 
-@media (max-width: 900px) {
-  .modal__container--default {
-    padding: 30px;
+@media (max-width: 530px) {
+  .modal__container {
+    max-width: calc(100% - #{$padding-less-1200 * 2});
   }
-}
-@media (max-width: 768px) {
-  .modal__title {
-    font-size: 16px;
-  }
-}
-@media (max-width: 600px) {
-  .modal__container--default {
-    max-width: 80vw;
-    width: 100%;
-  }
-}
-@media (max-width: 500px) {
-  .modal__container--default {
-    max-width: 90vw;
+  .modal__close {
+    top: $padding-less-1200;
+    right: $padding-less-1200;
   }
 }
