--- a/client/src/components/ProductsBlock/ProductsBlock.scss
+++ b/client/src/components/ProductsBlock/ProductsBlock.scss
@@ -2,6 +2,20 @@
 @import '../../assets/scss/variables.scss';
 
 .products {
-  padding: $padding-over-1200 0;
-  width: 100%;
+  margin: 0;
+  border-top: calc(#{$categories-height} + #{$header-height}) solid transparent;
+  margin-top: calc(#{-$categories-height} + #{-$header-height});
+  padding-top: $padding-over-1200;
+}
+.products__list {
+  display: grid;
+  grid-template-columns: repeat(2, minmax(290px, 1fr));
+  grid-gap: 2em;
+}
+
+@media (max-width: 1024px) {
+  .products__list {
+    grid-template-columns: 1fr;
+    grid-gap: 1.5em;
+  }
 }
