--- a/client/src/assets/scss/_variables.scss
+++ b/client/src/assets/scss/_variables.scss
@@ -1,12 +1,12 @@
 // ==== Цвета ====
-$primary: rgb(41, 163, 219);
-$secondary: rgb(240, 177, 3);
-$blue: rgb(17, 78, 107);
+$primary: #e9d735;
+$secondary: #a7a7a7;
+$black: #1e1e1e;
 $gray-1: rgb(226, 226, 226);
 $gray-2: rgb(168, 168, 168);
 
 // ==== Размеры и отступы ====
-$header-height: 60px;
+$header-height: 74px;
 $categories-height: 45px;
 $desktop-width: 1200px;
 $margin-over-1200: 30px;
