--- a/client/src/assets/scss/_mixins.scss
+++ b/client/src/assets/scss/_mixins.scss
@@ -1,6 +1,7 @@
 @mixin h2 {
   margin: 0;
-  font-family: 'Inter', sans-serif;
+  font-family: 'Monterrat', sans-serif;
+  font-weight: 600;
   font-style: normal;
   font-size: 24px;
   line-height: 150%;
@@ -17,7 +18,8 @@
 }
 @mixin h3 {
   margin: 0;
-  font-family: 'Inter', sans-serif;
+  font-family: 'Monterrat', sans-serif;
+  font-weight: 400;
   font-style: normal;
   font-size: 20px;
   line-height: 150%;
@@ -31,32 +33,32 @@
     line-height: 100%;
   }
 }
-// @mixin big-text {
-//   margin: 0;
-//   font-family: 'Inter', sans-serif;
-//   font-style: normal;
-//   font-weight: normal;
-//   font-size: 20px;
-//   line-height: 150%;
-
-//   @media (max-width: 1366px) {
-//     font-size: 18px;
-//     line-height: 26px;
-//   }
-//   @media (max-width: 1200px) {
-//     font-size: 16px;
-//     line-height: 22px;
-//   }
-//   @media (max-width: 768px) {
-//     font-size: 14px;
-//     line-height: 22px;
-//   }
-// }
-@mixin text {
+@mixin big-text {
   margin: 0;
   font-family: 'Inter', sans-serif;
   font-style: normal;
   font-weight: normal;
+  font-size: 16px;
+  line-height: 150%;
+
+  @media (max-width: 1366px) {
+    font-size: 14px;
+    line-height: 26px;
+  }
+  // @media (max-width: 1200px) {
+  //   font-size: 16px;
+  //   line-height: 22px;
+  // }
+  // @media (max-width: 768px) {
+  //   font-size: 14px;
+  //   line-height: 22px;
+  // }
+}
+@mixin text {
+  margin: 0;
+  font-family: 'Monterrat', sans-serif;
+  font-weight: 300;
+  font-style: normal;
   font-size: 14px;
   line-height: 150%;
 }
