--- a/client/src/assets/scss/style.scss
+++ b/client/src/assets/scss/style.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&display=swap');
 @import './variables.scss';
 @import './mixins.scss';
 @import './globals.scss';
