--- a/client/src/components/Product/Product.scss
+++ b/client/src/components/Product/Product.scss
@@ -7,14 +7,21 @@
   width: 100%;
   border-radius: 16px;
   box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.15);
+  border: 1px solid rgba(0, 0, 0, 0.15);
   min-height: 230px;
   transition: linear 0.2s;
   overflow: hidden;
   z-index: 10;
 
+  &:hover {
+    border: 1px solid $primary;
+  }
   &--added {
     background-color: #f5f5f5;
     box-shadow: 0 0 8px 1px #c6c5c5;
+  }
+  &--added:hover {
+    border-color: rgba(0, 0, 0, 0.15);
   }
   .button {
     background-color: #fff;
@@ -30,9 +37,20 @@
 .product__name {
   @include h3;
 }
+.product__weight {
+  display: block;
+  margin: 10px 0;
+  @include text;
+  opacity: 0.5;
+}
 .product__compound {
   @include text;
   margin-top: $margin-over-1200;
+  margin-top: 15px;
+
+  span {
+    opacity: 0.5;
+  }
 }
 .product__photo {
   position: relative;
