--- a/client/src/components/Footer/Footer.scss
+++ b/client/src/components/Footer/Footer.scss
@@ -13,12 +13,45 @@
   margin: 0 auto;
   padding: $padding-over-1200 0;
   border-top: 1px solid rgba(0, 0, 0, 0.1);
+
+  & > div {
+    display: flex;
+  }
 }
 .footer__phone {
-  font-size: 28px;
+  @include big-text;
+  color: $secondary;
+}
+.footer__socials {
+  display: flex;
+  align-items: center;
+  margin-left: 20px;
+
+  li:not(:last-child) {
+    margin-right: 10px;
+  }
+}
+.footer .button {
+  @include text;
+  color: $secondary;
 }
 .footer__made-by {
-  @include text;
+  display: flex;
+  align-items: center;
+
+  span {
+    @include text;
+    color: $secondary;
+    line-height: 100%;
+  }
+  a {
+    margin-left: 5px;
+    font-size: 0;
+  }
+  img {
+    margin-top: -8px;
+    max-height: 30px;
+  }
 }
 
 @media (max-width: 1280px) {
@@ -26,9 +59,8 @@
     padding: $padding-over-1200;
   }
 }
-@media (max-width: 640px) {
+@media (max-width: 700px) {
   .footer__container {
-    // padding: $padding-less-1200;
     padding-left: 0;
     padding-right: 0;
     flex-direction: column;
