--- a/client/src/assets/scss/_mixins.scss
+++ b/client/src/assets/scss/_mixins.scss
@@ -1,10 +1,10 @@
 @mixin h2 {
   margin: 0;
-  font-family: 'Monterrat', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-weight: 600;
   font-style: normal;
   font-size: 24px;
-  line-height: 150%;
+  line-height: 140%;
 
   @media (max-width: 1440px) {
     font-size: 22px;
@@ -14,15 +14,16 @@
   }
   @media (max-width: 1200px) {
     font-size: 18px;
+    line-height: 120%;
   }
 }
 @mixin h3 {
   margin: 0;
-  font-family: 'Monterrat', sans-serif;
-  font-weight: 400;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 600;
   font-style: normal;
   font-size: 20px;
-  line-height: 150%;
+  line-height: 140%;
 
   @media (max-width: 1366px) {
     font-size: 18px;
@@ -30,35 +31,33 @@
   }
   @media (max-width: 1200px) {
     font-size: 16px;
-    line-height: 100%;
+    line-height: 120%;
   }
 }
 @mixin big-text {
   margin: 0;
-  font-family: 'Inter', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
-  line-height: 150%;
+  line-height: 140%;
 
   @media (max-width: 1366px) {
     font-size: 14px;
-    line-height: 26px;
   }
-  // @media (max-width: 1200px) {
-  //   font-size: 16px;
-  //   line-height: 22px;
-  // }
-  // @media (max-width: 768px) {
-  //   font-size: 14px;
-  //   line-height: 22px;
-  // }
+  @media (max-width: 1200px) {
+    line-height: 120%;
+  }
 }
 @mixin text {
   margin: 0;
-  font-family: 'Monterrat', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-weight: 300;
   font-style: normal;
   font-size: 14px;
-  line-height: 150%;
+  line-height: 140%;
+
+  @media (max-width: 1200px) {
+    line-height: 120%;
+  }
 }
