--- a/client/src/components/Modal/Modal.scss
+++ b/client/src/components/Modal/Modal.scss
@@ -24,7 +24,7 @@
   top: 50%;
   left: 50%;
   overflow-y: auto;
-  max-width: 520px;
+  max-width: 850px;
   width: 100%;
   max-height: 80vh;
   transform: translate(-50%, -50%);
@@ -105,10 +105,12 @@
   }
 }
 
-@media (max-width: 530px) {
+@media (max-width: 900px) {
   .modal__container {
     max-width: calc(100% - #{$padding-less-1200 * 2});
   }
+}
+@media (max-width: 530px) {
   .modal__close {
     top: $padding-less-1200;
     right: $padding-less-1200;
