--- a/client/src/components/Modal/Modal.scss
+++ b/client/src/components/Modal/Modal.scss
@@ -26,14 +26,10 @@
   overflow-y: auto;
   max-width: 850px;
   width: 100%;
+  border-radius: 6px;
   max-height: 80vh;
   transform: translate(-50%, -50%);
 
-  &--default {
-    padding: 60px;
-    border-radius: 12px;
-    background-color: #fff;
-  }
   &.entering {
     animation: fade-modal-show 0.5s forwards;
   }
@@ -57,6 +53,10 @@
     opacity: 0;
   }
 }
+.modal__body {
+  padding: 2em;
+  background-color: #fff;
+}
 .modal__close {
   position: absolute;
   padding: 0;
@@ -65,7 +65,6 @@
   width: 30px;
   height: 30px;
   font-size: 0;
-  transition: ease 0.25s;
 
   &:hover {
     box-shadow: 0 0 1px 1px #ccc;
@@ -89,25 +88,47 @@
   }
 }
 .modal__title {
-  @include text;
-  font-weight: bold;
-  text-align: center;
+  @include h3;
+  margin-bottom: 25px;
+}
+.modal__subtitle {
+  @include h3;
+  font-weight: 400;
+  margin-top: 30px;
+  margin-bottom: 20px;
 }
 .modal__text {
-  margin-bottom: 30px;
-  text-align: center;
+  @include big-text;
+  margin: $margin-less-1200 0;
+  font-weight: 400;
+
+  &--yellow {
+    color: $primary;
+  }
 }
-.modal__form {
-  & > input,
-  textarea,
-  button {
-    margin-bottom: 25px;
+.modal__small-text {
+  margin: 10px 0;
+  font-size: 12px;
+}
+.modal__list {
+  li {
+    @include big-text;
+    font-weight: 400;
+  }
+  li:not(:last-of-type) {
+    margin-bottom: 1em;
   }
 }
 
 @media (max-width: 900px) {
   .modal__container {
     max-width: calc(100% - #{$padding-less-1200 * 2});
+  }
+  .modal__body {
+    padding: $padding-less-1200;
+  }
+  .modal__small-text {
+    font-size: 11px;
   }
 }
 @media (max-width: 530px) {
