--- a/client/src/components/Modal/Modal.scss
+++ b/client/src/components/Modal/Modal.scss
@@ -14,19 +14,19 @@
   * {
     color: #000;
   }
-  .button {
-    width: 100%;
-    color: #fff;
-  }
 }
 .modal__container {
+  display: flex;
+  flex-direction: column;
   position: absolute;
   top: 50%;
   left: 50%;
+  padding: 2em;
   overflow-y: auto;
   max-width: 850px;
   width: 100%;
   border-radius: 6px;
+  background-color: #fff;
   max-height: 80vh;
   transform: translate(-50%, -50%);
 
@@ -35,6 +35,15 @@
   }
   &.exiting {
     animation: fade-modal-hide 0.5s forwards;
+  }
+  .button {
+    padding: 9px 18px;
+    align-self: flex-end;
+    border-radius: 0;
+    opacity: 0.5;
+  }
+  .button:hover {
+    opacity: 1;
   }
 }
 @keyframes fade-modal-show {
@@ -54,38 +63,7 @@
   }
 }
 .modal__body {
-  padding: 2em;
-  background-color: #fff;
-}
-.modal__close {
-  position: absolute;
-  padding: 0;
-  top: 5%;
-  right: 5%;
-  width: 30px;
-  height: 30px;
-  font-size: 0;
-
-  &:hover {
-    box-shadow: 0 0 1px 1px #ccc;
-    opacity: 0.5;
-  }
-  &::after,
-  &::before {
-    position: absolute;
-    left: 0;
-    top: 50%;
-    content: '';
-    width: 100%;
-    height: 1px;
-    background-color: #000;
-  }
-  &::after {
-    transform: rotate(45deg);
-  }
-  &::before {
-    transform: rotate(-45deg);
-  }
+  margin-bottom: 20px;
 }
 .modal__title {
   @include h3;
@@ -109,6 +87,13 @@
 .modal__small-text {
   margin: 10px 0;
   font-size: 12px;
+
+  &--gray {
+    &,
+    & * {
+      color: $secondary;
+    }
+  }
 }
 .modal__list {
   li {
@@ -129,11 +114,5 @@
   }
   .modal__small-text {
     font-size: 11px;
-  }
-}
-@media (max-width: 530px) {
-  .modal__close {
-    top: $padding-less-1200;
-    right: $padding-less-1200;
   }
 }
