--- a/client/src/components/Button/Button.scss
+++ b/client/src/components/Button/Button.scss
@@ -4,37 +4,19 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 5px;
   min-width: 30px;
   min-height: 30px;
-  border-radius: 8px;
   font-family: 'Inter', sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 18px;
   line-height: 100%;
-  color: #fff;
+  transition: ease 0.25s;
   white-space: nowrap;
   cursor: pointer !important;
 
-  &--primary {
-    background-color: $primary;
-  }
-  &--secondary {
-    background-color: $secondary;
-  }
-  &--outlined {
-    color: #000;
-    border: 1px solid #000;
-  }
   span {
     margin-right: 20px;
-  }
-  &:hover {
-    opacity: 0.7;
-  }
-  &--outlined:hover {
-    opacity: 0.5;
   }
 }
 
