Добавляю пустой слайдер рекомендуемых товаров на страницу заказа

--- a/client/src/assets/scss/_globals.scss
+++ b/client/src/assets/scss/_globals.scss
@@ -3,6 +3,7 @@ body {
   height: 100%;
   min-height: 100vh;
   overflow-x: hidden;
+  background-color: #fefefe;
 
   * {
     font-family: 'Montserrat', sans-serif;
