--- a/client/src/assets/scss/style.scss
+++ b/client/src/assets/scss/style.scss
@@ -5,3 +5,5 @@
 
 // ==== Библиотеки ====
 @import '~normalize-css/normalize.css';
+@import '~slick-carousel/slick/slick.css';
+@import '~slick-carousel/slick/slick-theme.css';
