Исправляю отображение фотографий товаров в корзине

--- a/client/src/components/CartItem/CartItem.scss
+++ b/client/src/components/CartItem/CartItem.scss
@@ -9,6 +9,8 @@
   width: 80px;
   height: 80px;
   border-radius: 6px;
+  object-fit: cover;
+  object-position: center;
 }
 .cart-item__top {
   display: flex;
