Добавляю подчеркивание на кнопку с информацией о доставке

--- a/client/src/pages/cart/cart.scss
+++ b/client/src/pages/cart/cart.scss
@@ -72,6 +72,10 @@
   font-size: 14px;
   border-radius: 6px;
   background-color: $gray-1;
+
+  .button {
+    text-decoration: underline;
+  }
 }
 .delivery-time__info {
   margin-bottom: 15px;
